# completionist

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker_entrypoint.sh  pyproject.toml
.github/workflows/: build-and-push-docker.yaml
completionist/: __main__.py  cli.py  dataset_io.py  default_schema.py  llm_api.py  processing.py  utils.py
completionist/commands/: build.py  chat.py  complete.py  translate.py
